update README files and validation reports
Refresh java/19-jdk-bookworm-slim-fips/README.md with expanded usage
and diagnostic guidance. Update top-level README, 10-MINUTE-VALIDATION-REPORT,
FINAL-VALIDATION-SUMMARY, and SECTION-6-CHECKLIST to reflect the current
FIPS validation state including MD5/SHA-1 legacy-allowed behaviour.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>